[fix] H1 letter-spacing

--- a/assets/sass/atoms/_type.sass
+++ b/assets/sass/atoms/_type.sass
@@ -3,7 +3,7 @@ h1
   color: $type-primary
   font-family: Bluu Suuperstar
   font-size: 25px
-  letter-spacing: -3.6px
+  letter-spacing: -1.8px
   line-height: 36px
   text-decoration: underline
 
